A website about sleep

--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html> 
 <head>
-<title> Josh's Image </title>
+<title> Why Sleep Is Good </title>
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 </head>
+<h1> Why Kids Should Get Sleep</h1>
 <body> 
+<p> The reason why kids should get sleep is because without sleep they will be grumpy and mean people. And nobody really likes grumpy people beause 
+they are mean. Kids should get at least 7-9 hours of sleep but with homework and school work. They are not able to so it is counter proactive. That's why I think that school should be pushed back. So that we can get more sleep and not be grumpy little kids, we are young adults and should act like it. 
+<br>
+<img src= "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTkHKpktkZyVZIVxvEf4R-6GcWtMUEGyZ7KODswvzQ2P5ijFI"/>
+<br> <br>
+<a href="file:///C:/Users/jsingleton/Desktop/NeedSleepKids.github.io/sleep.html"> Quotes About Sleep</a>
+<br>
+<a href="file:///C:/Users/jsingleton/Desktop/NeedSleepKids.github.io/new%202.html"> Video About Sleep </a>
 </body>
 </html>
