--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
 <html> 
 <head>
 <title> Why Sleep Is Good </title>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 </head>
-<h1> Why Kids Should Get Sleep</h1>
+
 <body> 
+<h1> Why Kids Should Get Sleep</h1>
 <p> The reason why kids should get sleep is because without sleep they will be grumpy and mean people. And nobody really likes grumpy people beause 
-they are mean. Kids should get at least 7-9 hours of sleep but with homework and school work. They are not able to so it is counter proactive. That's why I think that school should be pushed back. So that we can get more sleep and not be grumpy little kids, we are young adults and should act like it. 
+they are mean. Kids should get at least 7-9 hours of sleep but with homework and school work. They are not able to so it is counter proactive. That's why I think that school should be pushed back. So that we can get more sleep and not be grumpy little kids, we are young adults and should act like it. </p>
 <br>
 <img src= "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTkHKpktkZyVZIVxvEf4R-6GcWtMUEGyZ7KODswvzQ2P5ijFI"/>
 <br> <br>
