--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ they are mean. Kids should get at least 7-9 hours of sleep but with homework and
 <br>
 <img src= "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTkHKpktkZyVZIVxvEf4R-6GcWtMUEGyZ7KODswvzQ2P5ijFI"/>
 <br> <br>
-<a href="file:///C:/Users/jsingleton/Desktop/NeedSleepKids.github.io/sleep.html"> Quotes About Sleep</a>
+<a href="sleep.html"> Quotes About Sleep</a>
 <br>
-<a href="file:///C:/Users/jsingleton/Desktop/NeedSleepKids.github.io/new%202.html"> Video About Sleep </a>
+<a href="new%202.html"> Video About Sleep </a>
 </body>
 </html>
